--- a/src/main/html-source/app.less
+++ b/src/main/html-source/app.less
@@ -5,6 +5,7 @@
 
 /* Component LESS */
 @import "partial/home/home.less";
+@import "partial/details/details.less";
 /* Add Component LESS Above */
 
 /* Required for Angular UI Bootstrap */
