--- a/src/main/html-source/partial/details/details.html
+++ b/src/main/html-source/partial/details/details.html
@@ -1,4 +1,49 @@
 <div class="col-md-12">
-This is details
+    <div>
+        <a ui-sref="home">Home</a>
+    </div>
+    <form >
+        <div class="form-group">
+            <label for="id">Company Id</label>
+            <input type="text" class="form-control" id="id" ng-model="details.companyId" readonly>
+        </div>
+        <div class="form-group">
+            <label for="Name">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="Name" required ng-model="details.name">
+        </div>
+        <div class="form-group">
+            <label for="City">Name</label>
+            <input type="text" class="form-control" id="city" placeholder="city" required ng-model="details.city">
+        </div>
+        <div class="form-group">
+            <label for="address">Address</label>
+            <input type="text" class="form-control" id="address" placeholder="Address" required ng-model="details.address">
+        </div>
+        <div class="form-group">
+            <label for="country">Country</label>
+            <input type="text" class="form-control" id="country" placeholder="Country" required ng-model="details.country">
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" class="form-control" id="email" placeholder="email"  ng-model="details.email">
+        </div>
+        <div class="form-group">
+            <label for="phoneNumber">Phone</label>
+            <input type="text" class="form-control" id="phoneNumber" placeholder="Phone"  ng-model="details.phoneNumber">
+        </div>
+        <div class="form-group" ng-repeat="owner in details.owners||[] track by $index">
+            <label for="owner{{$index}}">Owner {{$index}} </label>
+            <span id="owner{{$index}}">{{owner}}</span>
+        </div>
+        <div class="form-group" ng-if="details.companyId">
+            <label for="new_owner">New Owner to Add</label>
+            <input type="text" class="form-control" id="new_owner" placeholder="New Owner"  ng-model="newOwner">
+        </div>
+
+        <button type="submit" class="btn btn-default" ng-click="addOwners(details.companyId,newOwner)" ng-if="details.companyId">Add Owners</button>
+
+        <button type="submit" class="btn btn-default" ng-click="update(details)">{{formType}}</button>
+    </form>
+
 
 </div>
