Changed details page
Signed-off-by: himangshu <himangshu@gozoomo.com>

--- a/src/main/html-source/partial/details/details.html
+++ b/src/main/html-source/partial/details/details.html
@@ -12,7 +12,7 @@
             <input type="text" class="form-control" id="name" placeholder="Name" required ng-model="details.name">
         </div>
         <div class="form-group">
-            <label for="City">Name</label>
+            <label for="City">City</label>
             <input type="text" class="form-control" id="city" placeholder="city" required ng-model="details.city">
         </div>
         <div class="form-group">
